<resources>
    <string name="app_name">Github Sample</string>
    <string name="no_connectivity">No connectivity</string>
    <string name="not_logged">Not logged in</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="error_loading_users">Error loading users</string>
    <string name="error_loading_user">Error loading user</string>
    <string name="no_users_found">No users found</string>
    <string name="no_repositories_found">No repositories found</string>

    <string name="search_user">Search user</string>
    <string name="search_user_or_repository">Search user or repository</string>
    <string name="public_gists">%1$d Public Gists</string>
    <string name="public_repos">%1$d Public Repos</string>
    <string name="hireable">Hireable</string>
    <string name="location">Location</string>
    <string name="blog">Blog</string>
    <string name="company">Company</string>
    <string name="email">E-mail</string>
    <string name="bio">Bio</string>
    <string name="following">Following %1$d</string>
    <string name="followers">%1$d Followers</string>
    <string name="public_repositories">Public Repositories</string>

    <string name="retry">Retry</string>
    <string name="users">Users</string>
    <string name="repositories">Repositories</string>
</resources>
