<?xml version="1.0" encoding="utf-8"?>
<br.com.github.sample.ui.search.repositorysearch.RepositoryView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/selectableItemBackground"
    android:clickable="true">

    <TextView
        android:id="@+id/tv_repository_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:padding="16dp"
        tools:text="Teste" />

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider" />

</br.com.github.sample.ui.search.repositorysearch.RepositoryView>