<?xml version="1.0" encoding="utf-8"?>
<br.com.github.sample.view.UserSearchView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_person_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            tools:text="Teste" />
    </LinearLayout>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:background="@color/divider" />

</br.com.github.sample.view.UserSearchView>